<resources>
    <string name="app_name">BudgetingBuddy</string>
    <string name="total_balance_remaining">Total Balance Remaining:</string>
    <string name="number_string">%f</string>
    <string name="monthly_balance_remaining">Monthly Balance Remaining:</string>
    <string name="monthly_breakdown">Monthly Breakdown:</string>
    <string name="overspending_breakdowns_and_trends">Overspending Breakdowns and Trends</string>
    <string name="review_spending_history">Review Spending History</string>
    <string name="edit_budget">Edit Budget</string>
    <string name="test">TEST</string>
    <string name="create_account">Create Account</string>
    <string name="email_colon">email:</string>
    <string name="email">email</string>
    <string name="username_colon">username:</string>
    <string name="username">username</string>
    <string name="password_colon">password:</string>
    <string name="password">password</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="click_chart_for_budget_summary">Click chart for budget summary</string>
    <string name="input_transaction">Input Transaction</string>
    <string name="user_settings">User Settings</string>
    <string name="budget_history_and_projections">Budget History and Projections</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="input_manual_transaction">Input Manual Transaction</string>
    <string name="amount_colon">Amount:</string>
    <string name="dollar_sign">$</string>
    <string name="type_colon">Type:</string>
    <string name="type">Type</string>
    <string name="items_optional_colon">Items(Optional):</string>
    <string name="items">Items</string>
    <string name="renews">Renews?</string>
    <string name="_1_month">1 Month</string>
    <string name="_4_months">4 Months</string>
    <string name="_1_year">1 Year</string>
    <string name="_3_months">3 Months</string>
    <string name="_6_months">6 Months</string>
    <string name="never">Never</string>
    <string name="style">Style</string>
    <string name="viewing_budget">Viewing Budget</string>
    <string name="dollar_based">Dollar Based</string>
    <string name="percentile_based">Percentile Based</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="scan">scan</string>
    <string name="manual">manual</string>
    <string name="history">history</string>
    <string name="settings">settings</string>
    <string name="home">home</string>
    <string name="edit">edit</string>
    <string name="summary">summary</string>
    <string name="input_scan_transaction">Center receipt in box to scan</string>
    <string name="preview">Preview Transaction</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="subtotal_colon">Subtotal: $</string>
    <string name="tax_colon">Tax: $</string>
    <string name="total_colon">Total: $</string>
    <string name="zero">0.00</string>
    <string name="add_category">Add Category</string>
    <string name="category_hint">Category</string>
    <string name="amount_hint">Amount</string>
    <string name="dialog_title_add">Add a Budget Category</string>
    <string name="dialog_title_edit">Edit a Budget Category</string>
    <string name="delete">Delete</string>
    <string name="icon">Icon</string>
    <string name="logout">Logout</string>
    <string name="font_size">Font Size</string>
    <string name="font_style">Bold Text</string>
    <string name="amount_string">$%f</string>
    <string name="add_funds">Add Funds</string>
    <string name="search_transactions">Search Transactions</string>
    <string name="search">MM-dd-yyyy</string>
    <string name="total_amount">$ To Add To Total Amount</string>
    <string name="monthly_amount">$ To Add To Monthly Amount</string>
    <string name="categories_collection_reference">categories</string>
    <string name="chart_label">%s , %f</string>
    <string name="dollar">$</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_type">Choose transaction category</string>
    <string-array name="category_array">

        </string-array>
</resources>