<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/login_layout"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_colon"
        android:padding="20dp"
        android:layout_below="@id/login_text_view"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/username_edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:padding="20dp"
        android:layout_below="@id/username_text_view"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_colon"
        android:padding="20dp"
        android:layout_below="@id/username_edit_text_view"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/password_edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:padding="20dp"
        android:layout_below="@id/password_text_view"
        android:textColor="@color/gray"
        />
    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:background="@color/gray"
        android:layout_below="@id/password_edit_text_view"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/forgot_password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:padding="20dp"
        android:layout_below="@id/login_button"
        android:textColor="@color/teal_700"
        />

    <TextView
        android:id="@+id/create_account_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:padding="20dp"
        android:layout_below="@id/forgot_password_text_view"
        android:textColor="@color/teal_700"
        />
</RelativeLayout>