<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/font_size_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_size"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="15dp"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/font_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_drop_up_24"
            android:layout_marginHorizontal="15dp"
            android:layout_toLeftOf="@+id/font_size_text_view"/>

        <TextView
            android:id="@+id/font_size_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_toLeftOf="@+id/font_down"
            android:layout_marginHorizontal="15dp"
            android:layout_centerVertical="true"/>

        <ImageButton
            android:id="@+id/font_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_drop_down_24"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="15dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/font_style_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/font_size_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font_style"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="15dp"
            android:layout_centerVertical="true"/>

        <Switch
            android:id="@+id/bold_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="15dp"/>
    </RelativeLayout>

</RelativeLayout>